--- a/client.htm
+++ b/client.htm
@@ -279,16 +279,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-130917.htm" title="手机B站科学上网失效的深层原因与实用解决方案全解析">手机B站科学上网失效的深层原因与实用解决方案全解析</a></li>
-                        <li class="py-2"><a href="/news/article-125794.htm" title="热点共享科学上网：解锁网络自由的终极指南与深度解析">热点共享科学上网：解锁网络自由的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-128144.htm" title="从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南">从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-126134.htm" title="突破网络边界：科学上网APK的深度指南与实战技巧">突破网络边界：科学上网APK的深度指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-128490.htm" title="轻云V2Ray节点完全指南：从入门到精通的安全代理配置">轻云V2Ray节点完全指南：从入门到精通的安全代理配置</a></li>
                         <li class="py-2"><a href="/news/article-126798.htm" title="苹果Shadowrocket终极使用指南：从入门到精通">苹果Shadowrocket终极使用指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-127470.htm" title="深度探索Clash2.5.8：从入门到精通的代理工具全攻略">深度探索Clash2.5.8：从入门到精通的代理工具全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-134459.htm" title="Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术">Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术</a></li>
+                        <li class="py-2"><a href="/news/article-124501.htm" title="Chrome科学上网全攻略：从入门到精通的完整指南">Chrome科学上网全攻略：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-136823.htm" title="解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南">解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-133499.htm" title="突破网络限制：Clash免流设置终极指南与深度实践">突破网络限制：Clash免流设置终极指南与深度实践</a></li>
+                        <li class="py-2"><a href="/news/article-135568.htm" title="搬瓦工VPS搭建SSR失败？一文解决所有连接难题">搬瓦工VPS搭建SSR失败？一文解决所有连接难题</a></li>
+                        <li class="py-2"><a href="/news/article-127123.htm" title="突破网络边界：iOS设备上V2Ray的完整配置与使用指南">突破网络边界：iOS设备上V2Ray的完整配置与使用指南</a></li>
                         <li class="py-2"><a href="/news/article-124798.htm" title="V2RayNG 32位全攻略：从零开始掌握高效代理工具">V2RayNG 32位全攻略：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-129524.htm" title="科学上网工具全解析：从原理到实战的深度评测与排行">科学上网工具全解析：从原理到实战的深度评测与排行</a></li>
+                        <li class="py-2"><a href="/news/article-130225.htm" title="在Padavan路由器上搭建vmess代理：从入门到精通的完整指南">在Padavan路由器上搭建vmess代理：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-128490.htm" title="轻云V2Ray节点完全指南：从入门到精通的安全代理配置">轻云V2Ray节点完全指南：从入门到精通的安全代理配置</a></li>
                     </ul>
     </div>
 </div>
@@ -300,7 +300,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
