--- a/date/2025-07/page-3.htm
+++ b/date/2025-07/page-3.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://topproxy.github.io" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>隐私申明 - 顶级代理服务器 免费订阅中文网</title>
-        <meta name="keywords" content="隐私申明 - 顶级代理服务器 免费订阅中文网" />
-        <meta name="description" content="隐私申明 - 顶级代理服务器 免费订阅中文网" />
+    <title>2025-07归档 - 第2页 - 顶级代理服务器 免费订阅中文网</title>
+        <meta name="keywords" content="2025-07归档顶级代理服务器 免费订阅中文网" />
+        <meta name="description" content="2025-07归档，当前是第2页" />
         <link rel="icon" href="/assets/website/img/v2raysubscribe/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级代理服务器 免费订阅中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://topproxy.github.io" />
     <meta property="og:site_name" content="顶级代理服务器 免费订阅中文网" />
-    <meta property="og:title" content="隐私申明 - 顶级代理服务器 免费订阅中文网" />
+    <meta property="og:title" content="2025-07归档 - 第2页 - 顶级代理服务器 免费订阅中文网" />
     <meta property="og:image" content="/assets/website/img/v2raysubscribe/favicon.ico" />
-        <meta property="og:description" content="隐私申明 - 顶级代理服务器 免费订阅中文网" />
+        <meta property="og:description" content="2025-07归档，当前是第2页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -28,7 +28,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="隐私申明 - 顶级代理服务器 免费订阅中文网">
+    <meta name="apple-mobile-web-app-title" content="2025-07归档 - 第2页 - 顶级代理服务器 免费订阅中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -71,7 +71,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="newly_discovered_nodes">
+<body data-page="category">
     <div id="all">
             <!-- navbar-->
     <header class="header">
@@ -100,9 +100,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>隐私申明</h1>
+                        <h1>2025-07 归档</h1>
                         <p class="weight-300">
-                            <a href="/">首页</a> / 隐私申明
+                            <a href="/">首页</a> / 2025-07 归档
                         </p>
                     </div>
                 </div>
@@ -113,51 +113,23 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
-                        <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们深知用户隐私的重要性，并致力于保护用户的个人信息和隐私安全。本隐私声明旨在明确告知用户本平台如何收集、使用、存储和保护用户的个人信息。</p>
-<p>一、信息收集</p>
-<ol>
-    <li>
-        <p><strong>用户主动提供的信息</strong>：当用户在本平台注册、使用服务或参与特定活动时，可能会主动提供个人信息，如姓名、邮箱地址等。这些信息将仅用于提供服务或活动的目的，并在用户明确同意的情况下进行收集。</p>
-    </li>
-    <li>
-        <p><strong>服务使用数据</strong>：为了优化用户体验和服务质量，本平台可能会自动收集用户在使用服务过程中产生的数据，如访问记录、节点使用情况等。这些数据将用于分析服务使用情况，以便我们持续改进服务。</p>
-    </li>
-</ol>
-<p>二、信息使用</p>
-<ol>
-    <li>
-        <p><strong>提供服务</strong>：本平台将使用收集到的信息来提供用户所需的服务，包括但不限于节点订阅、服务更新通知等。</p>
-    </li>
-    <li>
-        <p><strong>数据分析</strong>：我们可能会对收集到的数据进行分析，以了解用户的使用习惯和需求，从而改进和优化服务。</p>
-    </li>
-    <li>
-        <p><strong>法律合规</strong>：在必要时，我们可能会根据法律法规的要求，向相关部门提供用户的个人信息，以配合执法或调查工作。</p>
-    </li>
-</ol>
-<p>三、信息存储与保护</p>
-<ol>
-    <li>
-        <p><strong>信息安全</strong>：本平台将采取必要的技术和管理措施，确保用户个人信息的安全。我们会对存储的数据进行加密处理，并定期进行安全检查和漏洞修复。</p>
-    </li>
-    <li>
-        <p><strong>信息存储期限</strong>：我们将根据服务需求和相关法律法规的要求，合理确定用户个人信息的存储期限。一旦超出存储期限，我们将对个人信息进行删除或匿名化处理。</p>
-    </li>
-</ol>
-<p>四、用户权利</p>
-<ol>
-    <li>
-        <p><strong>访问与更正</strong>：用户有权访问自己的个人信息，并对其进行更正。用户可以通过本平台提供的联系方式，申请查看或修改自己的个人信息。</p>
-    </li>
-    <li>
-        <p><strong>删除</strong>：在用户停止使用服务或注销账户后，我们将根据用户的请求，删除或匿名化处理其个人信息。</p>
-    </li>
-    <li>
-        <p><strong>投诉与举报</strong>：如果用户认为本平台在处理个人信息方面存在违法行为，可以通过本平台提供的联系方式进行投诉或举报。</p>
-    </li>
-</ol>
-<p>五、隐私声明的更新与修改</p>
-<p>本平台有权根据实际情况和法律法规的变化，对本隐私声明进行更新和修改。任何对隐私声明的修改都将通过本平台公告或电子邮件等方式通知用户。用户在使用服务时，应定期查看隐私声明，以了解最新的个人信息保护措施。</p>
+                        <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-01">
+                                <div class="col-md-3">
+                                    <a href="/news/article-130225.htm" class="xcblog-blog-url">
+                                        <img alt="在Padavan路由器上搭建vmess代理：从入门到精通的完整指南" src="/uploads/20241210/c8aeca7ec04508d834868d756fa8dda4.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-130225.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            在Padavan路由器上搭建vmess代理：从入门到精通的完整指南                                        </h3>
+                                    </a>
+                                    <p>前言：为什么选择Padavan与vmess组合？  在当今互联网环境中，网络自由与隐私保护已成为越来越多用户的刚需。Padavan作为一款基于Linux的高性能路由器固件，以其稳定性和丰富的功能深受技</p>
+                                </div>
+                            </div>
+                            
+                            <ul class="pagination"><li><a href="/date/2025-07/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-07/">1</a></li><li><a href="/date/2025-07/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -166,15 +138,15 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-130225.htm" title="在Padavan路由器上搭建vmess代理：从入门到精通的完整指南">在Padavan路由器上搭建vmess代理：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-128144.htm" title="从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南">从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-132748.htm" title="科学上网闪退全攻略：从根源排查到完美解决方案">科学上网闪退全攻略：从根源排查到完美解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-126467.htm" title="深度解析：V2RayNG连接无反应的全面诊断与修复指南">深度解析：V2RayNG连接无反应的全面诊断与修复指南</a></li>
                         <li class="py-2"><a href="/news/article-127470.htm" title="深度探索Clash2.5.8：从入门到精通的代理工具全攻略">深度探索Clash2.5.8：从入门到精通的代理工具全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-125143.htm" title="突破网络边界：科学上网代理插件的终极使用手册">突破网络边界：科学上网代理插件的终极使用手册</a></li>
-                        <li class="py-2"><a href="/news/article-136112.htm" title="全面掌握GitHub Clash：从入门到精通的完整指南">全面掌握GitHub Clash：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-133825.htm" title="梅林路由器SSR科学上网全攻略：从安装到优化的终极指南">梅林路由器SSR科学上网全攻略：从安装到优化的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-125464.htm" title="突破网络边界：Shadowrocket深度使用指南与高阶配置技巧">突破网络边界：Shadowrocket深度使用指南与高阶配置技巧</a></li>
+                        <li class="py-2"><a href="/news/article-135568.htm" title="搬瓦工VPS搭建SSR失败？一文解决所有连接难题">搬瓦工VPS搭建SSR失败？一文解决所有连接难题</a></li>
                         <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-124501.htm" title="Chrome科学上网全攻略：从入门到精通的完整指南">Chrome科学上网全攻略：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-130567.htm" title="突破网络限制：v2rayng免费节点获取与使用全攻略">突破网络限制：v2rayng免费节点获取与使用全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-131621.htm" title="谷歌Play科学上网全攻略：解锁全球网络自由的终极指南">谷歌Play科学上网全攻略：解锁全球网络自由的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-131276.htm" title="解锁网络自由：电脑Clash汉化补丁全攻略与深度体验">解锁网络自由：电脑Clash汉化补丁全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-133180.htm" title="突破网络边界：路由器V2Ray Pro的全面解析与实战指南">突破网络边界：路由器V2Ray Pro的全面解析与实战指南</a></li>
                         <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
                     </ul>
     </div>
