--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -527,16 +527,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-131276.htm" title="解锁网络自由：电脑Clash汉化补丁全攻略与深度体验">解锁网络自由：电脑Clash汉化补丁全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-130567.htm" title="突破网络限制：v2rayng免费节点获取与使用全攻略">突破网络限制：v2rayng免费节点获取与使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-126467.htm" title="深度解析：V2RayNG连接无反应的全面诊断与修复指南">深度解析：V2RayNG连接无反应的全面诊断与修复指南</a></li>
-                        <li class="py-2"><a href="/news/article-134859.htm" title="深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南">深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-124173.htm" title="突破网络边界：2024年最全面的科学上网终极指南">突破网络边界：2024年最全面的科学上网终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-123845.htm" title="手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南">手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-129870.htm" title="深度揭秘Shadow科学上网：技术原理、实战指南与疑难解答">深度揭秘Shadow科学上网：技术原理、实战指南与疑难解答</a></li>
+                        <li class="py-2"><a href="/news/article-123207.htm" title="突破封锁的艺术：Trojan与V2Ray速度优化全攻略">突破封锁的艺术：Trojan与V2Ray速度优化全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-125794.htm" title="热点共享科学上网：解锁网络自由的终极指南与深度解析">热点共享科学上网：解锁网络自由的终极指南与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-129178.htm" title="安卓设备科学上网全攻略：SSR配置与优化指南">安卓设备科学上网全攻略：SSR配置与优化指南</a></li>
-                        <li class="py-2"><a href="/news/article-125464.htm" title="突破网络边界：Shadowrocket深度使用指南与高阶配置技巧">突破网络边界：Shadowrocket深度使用指南与高阶配置技巧</a></li>
-                        <li class="py-2"><a href="/news/article-127123.htm" title="突破网络边界：iOS设备上V2Ray的完整配置与使用指南">突破网络边界：iOS设备上V2Ray的完整配置与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-133825.htm" title="梅林路由器SSR科学上网全攻略：从安装到优化的终极指南">梅林路由器SSR科学上网全攻略：从安装到优化的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-131276.htm" title="解锁网络自由：电脑Clash汉化补丁全攻略与深度体验">解锁网络自由：电脑Clash汉化补丁全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-136823.htm" title="解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南">解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-135198.htm" title="解锁Xbox游戏新境界：V2Ray代理终极优化指南">解锁Xbox游戏新境界：V2Ray代理终极优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-130567.htm" title="突破网络限制：v2rayng免费节点获取与使用全攻略">突破网络限制：v2rayng免费节点获取与使用全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-135568.htm" title="搬瓦工VPS搭建SSR失败？一文解决所有连接难题">搬瓦工VPS搭建SSR失败？一文解决所有连接难题</a></li>
                     </ul>
     </div>
 </div>
@@ -548,7 +548,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
